# Flemmarr

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.sh  setup.py  tests.Dockerfile
docs/examples/: README.md  config-aliases.yaml  config.yaml
flemmarr/: config.py  manager.py  setup.py
tests/: test_mock_api_manager.py
